# lutris-bulk-adder

./: .gitignore  README.md  pyproject.toml  setup.py
lutris_bulk_adder/: constants.py  lib.py  lutris_bulk_adder.py
src/lutris_bulk_adder/: classes.py  constants.py  lib.py  lutris_bulk_adder.py
