[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lutris-bulk-adder-srh"
version = "0.1.1"
dependencies = ['PyYAML']
requires-python = ">= 3.0"
authors = [
    { name = "Eugene Hwang", email = "hwang.eug@gmail.com" }
]
maintainers = [
    { name = "SpeedRunHunter", email = "marcell2003.sm@gmail.com" }
]
description = "Python script to bulk import a directory of ROM files into Lutris"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ['Lutris', 'ROMs', 'Emulation']
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: End Users/Desktop',
    'Natural Language :: English',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    'Topic :: Games/Entertainment',
    'Topic :: Utilities'
]

[project.scripts]
lutris-bulk-adder = "lutris_bulk_adder.lutris_bulk_adder:main"

[project.urls]
Repository = "https://github.com/SpeedRunHunter/lutris-bulk-adder"
Issues = "https://github.com/SpeedRunHunter/lutris-bulk-adder/issues"